# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
include/AbstractFactory/: Character.h  Desctiption.h  Landscape.h  Transport.h  Weapon.h  WorldFactory.h
include/AdapterPattern/: Adapter.h  LegacyOrderSystem.h  ModerPaymentSystem.h  PaymentOrder.h
include/BridgePattern/: Engine.h  Vehicle.h
include/BuilderPattern/: Builders.h  Travel.h  TravelBuilder.h  TravelDirector.h
include/ChainOfResponsibility/: CallCenter.h  ChainBuilder.h  Experts.h  MiddleLevelSpecialist.h  Producer.h  Request.h  Support.h  SupportDepartments.h
include/CommandPattern/: Invoker.h
include/CommandPattern/Commands/: Command.h  ConcreteCommands.h
include/CommandPattern/Receivers/: AirConditioner.h  AudioSystem.h  Heating.h  Light.h  Receivers.h  SmartLock.h
include/CompositePattern/: Building.h  CityComponent.h  CompositeArea.h
include/DecoratorPattern/: Pizza.h  PizzaDecorator.h
include/FacadePattern/: Facade.h
include/FacadePattern/FactorySystem/: ConveyorLine.h  Lighting.h  QualityControlSystem.h  RoboticManipulator.h  Ventilation.h  Warehouse.h
include/FactoryMethod/: CargoTransportation.h  Transport.h  TransportCreator.h  TransportDescription.h
include/FlyWeightPattern/: Animation.h  Sprite.h  Texture.h  TextureFactory.h
include/IteratorPattern/Collections/: ListCollection.h  Node.h  TreeCollection.h
include/IteratorPattern/Iterator/: Iterator.h  ListIterator.h  TreeIterator.h
include/PrototypePattern/: Archer.h  CharacterPrototype.h  Mage.h  Skill.h  Warrior.h
include/ProxyPattern/: ProxyVideoService.h  RealVideoService.h  User.h  Video.h  logger.h
include/SingletonPattern/: Configuration.h  ConfigurationManager.h  JsonParser.h
logs/: hide_text_in_image_logs.txt
src/: main.cpp
src/AbstractFactory/: WorldFactory.cpp
src/AdapterPattern/: Adapter.cpp
src/BridgePattern/: Engine.cpp  Vehicle.cpp
src/BuilderPattern/: Builders.cpp  TravelDirector.cpp
src/CompositePattern/: Building.cpp  CompositeArea.cpp
src/DecoratorPattern/: Pizza.cpp  PizzaDecorator.cpp
src/FacadePattern/: Facade.cpp
src/FacadePattern/FactorySystem/: ConveyorLine.cpp  Lighting.cpp  QualityControlSystem.cpp  RoboticManipulator.cpp  Ventilation.cpp  Warehouse.cpp
src/FactoryMethod/: CargoCreator.cpp  Transport.cpp  TransportCreator.cpp
src/FlyWeightPattern/: Animation.cpp  Sprite.cpp  Texture.cpp  TextureFactory.cpp
src/PrototypePattern/: Archer.cpp  CharcterPrototype.cpp  Mage.cpp  Skill.cpp  Warrior.cpp
src/ProxyPattern/: ProxyVideoService.cpp  RealVideoService.cpp  User.cpp
src/SingletonPattern/: ConfigurationManager.cpp  JsonParser.cpp
